force-app/main/default/objects/E_MOC_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acknowledge_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acknowledge by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Activity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Activity</relationshipLabel>
        <relationshipName>E_MOC_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_days__c</fullName>
        <label>Frequency days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Monitoring_Date__c</fullName>
        <label>Next Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Date__c</fullName>
        <label>Next Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noti_before_end_date__c</fullName>
        <formula>E_MOC_Application__r.End_Date_Monitoring_Program__c - 31</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Noti before end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_frequency2__c</fullName>
        <formula>IF(
    ISPICKVAL(Period_frequency__c, &quot;15 Days&quot;), 15,
    IF(ISPICKVAL(Period_frequency__c, &quot;1 month&quot;), 30,
        IF(ISPICKVAL(Period_frequency__c, &quot;2 months&quot;), 60,
            IF(ISPICKVAL(Period_frequency__c, &quot;3 months&quot;), 90,
                IF(ISPICKVAL(Period_frequency__c, &quot;4 months&quot;), 120,
                    IF(ISPICKVAL(Period_frequency__c, &quot;5 months&quot;), 150,
                        IF(ISPICKVAL(Period_frequency__c, &quot;6 months&quot;), 180,
                            IF(ISPICKVAL(Period_frequency__c, &quot;7 months&quot;), 210,
                                IF(ISPICKVAL(Period_frequency__c, &quot;8 months&quot;), 240,
                                    IF(ISPICKVAL(Period_frequency__c, &quot;9 months&quot;), 270,
                                        IF(ISPICKVAL(Period_frequency__c, &quot;10 months&quot;), 300,
                                            IF(ISPICKVAL(Period_frequency__c, &quot;11 months&quot;), 330,
                                                IF(ISPICKVAL(Period_frequency__c, &quot;1 Year&quot;), 365,
                                                    IF(ISPICKVAL(Period_frequency__c, &quot;1.5 Years&quot;), 548,
                                                        IF(ISPICKVAL(Period_frequency__c, &quot;2 Years&quot;), 730,
                                                            IF(ISPICKVAL(Period_frequency__c, &quot;3 Years&quot;), 1095,
                                                                IF(ISPICKVAL(Period_frequency__c, &quot;6 Years&quot;), 2190, 0)
                                                            )
                                                        )
                                                    )
                                                )
                                            )
                                        )
                                    )
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period/frequency2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_frequency__c</fullName>
        <label>Period/frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 days</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>5 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>7 months</fullName>
                </value>
                <value>
                    <fullName>8 months</fullName>
                </value>
                <value>
                    <fullName>9 months</fullName>
                </value>
                <value>
                    <fullName>10 months</fullName>
                </value>
                <value>
                    <fullName>11 months</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>1.5 years</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>6 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_date__c</fullName>
        <formula>E_MOC_Application__r.Start_date2__c  + 

IF(
    ISPICKVAL(Period_frequency__c, &quot;15 Days&quot;), 15,
    IF(ISPICKVAL(Period_frequency__c, &quot;1 month&quot;), 30,
        IF(ISPICKVAL(Period_frequency__c, &quot;2 months&quot;), 60,
            IF(ISPICKVAL(Period_frequency__c, &quot;3 months&quot;), 90,
                IF(ISPICKVAL(Period_frequency__c, &quot;4 months&quot;), 120,
                    IF(ISPICKVAL(Period_frequency__c, &quot;5 months&quot;), 150,
                        IF(ISPICKVAL(Period_frequency__c, &quot;6 months&quot;), 180,
                            IF(ISPICKVAL(Period_frequency__c, &quot;7 months&quot;), 210,
                                IF(ISPICKVAL(Period_frequency__c, &quot;8 months&quot;), 240,
                                    IF(ISPICKVAL(Period_frequency__c, &quot;9 months&quot;), 270,
                                        IF(ISPICKVAL(Period_frequency__c, &quot;10 months&quot;), 300,
                                            IF(ISPICKVAL(Period_frequency__c, &quot;11 months&quot;), 330,
                                                IF(ISPICKVAL(Period_frequency__c, &quot;1 Year&quot;), 365,
                                                    IF(ISPICKVAL(Period_frequency__c, &quot;1.5 Years&quot;), 548,
                                                        IF(ISPICKVAL(Period_frequency__c, &quot;2 Years&quot;), 730,
                                                            IF(ISPICKVAL(Period_frequency__c, &quot;3 Years&quot;), 1095,
                                                                IF(ISPICKVAL(Period_frequency__c, &quot;6 Years&quot;), 2190, 0)
                                                            )
                                                        )
                                                    )
                                                )
                                            )
                                        )
                                    )
                                )
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_date_before_10d__c</fullName>
        <formula>Reminder_date__c  - 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder date before 10d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_date_before_5d__c</fullName>
        <formula>Reminder_date__c - 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder date before 5d</label>
        <type>Date</type>
    </fields>
    <label>E-MOC Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Application__c</columns>
        <columns>Acknowledge__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Action_by__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>